src/test/deca/context/valid/homemade/test/test23_decl_method.deca
// test valide de la règle 2.3


class A {
    int x;
    float b = 1.0;
    int get() {}
    boolean exists() {}
}