src/test/deca/context/invalid/homemade/tests/test366_champ_inaccessible.deca
// test invalide de la règle 3.66


class A{
    protected int x;
}

class B extends A {
    int getX(A a) {
        return a.x;
    }
}